--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
+    "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.0"
+    "mongoose": "^8.13.0",
+    "natural": "^8.0.1",
+    "node-cron": "^3.0.3",
+    "puppeteer": "^24.4.0",
+    "string-similarity": "^4.0.4",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
