--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@google/generative-ai": "^0.24.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
@@ -30,6 +31,8 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^2.1.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9"
   }
 }
