--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-cron": "^3.0.3",
     "puppeteer": "^24.4.0",
     "string-similarity": "^4.0.4",
+    "uuid": "^11.1.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
